--- a/AplicacionWebRobledoHeymy/Blazor/appsettings.json
+++ b/AplicacionWebRobledoHeymy/Blazor/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MySQL": "Server=localhost; Port=3306; Database=mibase; Uid=root; Pwd=lenguaje3;"
+  }
 }
