--- a/AplicacionWebRobledoHeymy/Datos/Datos.csproj
+++ b/AplicacionWebRobledoHeymy/Datos/Datos.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="MySql.Data" Version="8.0.31" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Modelos\Modelos.csproj" />
+  </ItemGroup>
+
 </Project>
